[gd_scene load_steps=6 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]
[ext_resource type="Script" path="res://scripts/Catcher.gd" id="2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_catcher"]
size = Vector2(100, 20)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hud"]
bg_color = Color(0, 0, 0, 0.5)

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
offset_right = 800.0
offset_bottom = 600.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="Catcher" type="CharacterBody2D" parent="."]
position = Vector2(400, 550)
script = ExtResource("2")

[node name="Sprite2D" type="ColorRect" parent="Catcher"]
offset_left = -50.0
offset_top = -10.0
offset_right = 50.0
offset_bottom = 10.0
color = Color(0.8, 0.8, 0.2, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Catcher"]
shape = SubResource("RectangleShape2D_catcher")

[node name="Area2D" type="Area2D" parent="Catcher"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Catcher/Area2D"]
shape = SubResource("RectangleShape2D_catcher")

[node name="FallingObjects" type="Node2D" parent="."]

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hud")

[node name="ScoreLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 30.0
grow_horizontal = 0
text = "Score: 0"

[node name="LivesLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 30.0
offset_right = -10.0
offset_bottom = 50.0
grow_horizontal = 0
text = "Lives: 3"